# clutch

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  index.html  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: claude-code-hooks.md
docs/plans/: session-attention-indicator.md
plans/: fix-status-file-mismatch.md  git-worktree-sessions.md  memorable-branch-names.md  terminal-search.md  windows-launch-fix.md
scripts/: build.sh  generate-tray-icon.js  notarize.sh  update-release-config.sh  upload.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  git.rs  hooks_config.rs  lib.rs  main.rs  notifications.rs  pty.rs
src/components/: AppLayout.tsx  NewSessionDialog.tsx  Onboarding.tsx  SessionContent.tsx  Settings.tsx  Sidebar.tsx  Terminal.tsx  TerminalSearchBar.tsx  TitleBar.tsx  UpdateDialog.tsx  UpdateToast.tsx
src/components/onboarding/: SetupScreen.tsx  WelcomeScreen.tsx
src/components/shared/: WorkingDirectoryInput.tsx
src/components/ui/: button.tsx  dialog.tsx
src/hooks/: useKeyboardShortcuts.ts  usePolling.ts  usePty.ts  useSessionHandlers.ts  useSessionStore.ts  useUpdateToast.ts  useUpdater.ts
src/lib/: config.ts  persisted-tabs.ts  sessions.ts  sounds.ts  worktrees.ts
